# huvcli

./: .gitignore  HUV.md  README.md  pyproject.toml
scripts/: install.ps1  install.sh  update.ps1  update.sh
src/huvcli/: agent.py  assets.py  cli.py  compact.py  hooks.py  mcp.py  provider.py  storage.py  tools.py  ui.py
src/huvcli/agent/: __init__.py  loop.py  parsing.py  prompt.py  render.py  repeat_guard.py
src/huvcli/session/: __init__.py  compaction.py  state.py  storage.py
src/huvcli/tools/: __init__.py  context.py  descriptions.py  diff.py  edit.md  edit.py  glob.md  glob.py  listing.md  listing.py  overview.md  overview.py  patch.md  patch.py  paths.py  permission.py  plan.md  plan.py  question.md  question.py  read.md  read.py  read_files.md  registry.py  revert.py  search.md  search.py  shell.md  shell.py  state.py  webfetch.md  webfetch.py  write.md  write.py
tests/: fake_mcp_server.py  test_agent.py  test_compact.py  test_completer.py  test_hooks.py  test_mcp.py  test_overview.py  test_plan_mode.py  test_question_tool.py  test_revert.py  test_session_state.py  test_storage.py  test_tools.py  test_ui.py  test_webfetch.py
