[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "huvcli"
version = "0.1.0"
description = "A small CLI coding agent."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "huvcli" }]
dependencies = []

[project.scripts]
huv = "huvcli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
huvcli = ["agent_assets/**/*"]
