[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "huvcli"
version = "0.1.0"
description = "A small CLI coding agent."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "huvcli" }]
dependencies = [
    # Windows lacks stdlib readline — pyreadline3 fills it in so tab
    # completion works out of the box.
    "pyreadline3>=3.4; sys_platform == 'win32'",
]

[project.scripts]
huv = "huvcli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
huvcli = ["agent_assets/**/*"]
"huvcli.tools" = ["*.md"]
